[tool.poetry]
name = "flespi-webapp-demo-backend"
version = "0.1.0"
description = ""
authors = ["Pavel Vinnikov"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
pydantic = "^1.9.1"
ujson = "^5.4.0"

[tool.poetry.dev-dependencies]
bandit = "1.7.2"
mypy = "0.961"
flake8 = "^4.0.1"
aiohttp-devtools = "^1.0.post0"
aiohttp-debugtoolbar = "^0.6.0"
types-ujson = "^5.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
